infrastructure/configurations/production/ingress/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: controller-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ingress.internal.infra01.alter-it.eu`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: tailnet-only
          namespace: controller-ingress
  tls:
    secretName: ingress-internal-infra01-alter-it-eu-tls
